// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline should render correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  border-radius: 50%;
  height: 4rem;
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  width: 4rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

.c3 {
  color: #404040;
  margin-bottom: 0.25rem;
}

.c4 {
  color: #5A5A5A;
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
  }
}

<div
  class="c0"
>
  <img
    class="c1"
    src="https://i.pravatar.cc/128?img=69"
  />
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      John Smith
    </span>
    <span
      class="c4"
    >
      Art editor
    </span>
  </div>
</div>
`;

exports[`Byline should render correctly without an avatar 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

.c2 {
  color: #404040;
}

.c3 {
  color: #5A5A5A;
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.875rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      By John Smith
    </span>
    <span
      class="c3"
    >
      Art editor
    </span>
  </div>
</div>
`;
